# Graphic

./: .gitignore  CMakeLists.txt  README.md
include/: AudioDrag.h  AudioPropertiesDialog.h  AudioTypes.h  Commands.h  ConnectionItem.h  DemoView.h  FrequencyResponsePlot.h  MainWindow.h  ModuleItem.h  ModuleTreeWidget.h  PatchTransport.h  PortItem.h  SceneIo.h  TitleItem.h
src/: AudioPropertiesDialog.cpp  AudioTypes.cpp  Commands.cpp  ConnectionItem.cpp  DemoView.cpp  FrequencyResponsePlot.cpp  MainWindow.cpp  ModuleItem.cpp  ModuleTreeWidget.cpp  PatchTransport.cpp  PortItem.cpp  SceneIo.cpp  TitleItem.cpp  main.cpp
translations/: DspTunerHost_zh_CN.ts  GraphicsDemo_zh_CN.ts
